// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-accordion should render with _label="Überschrift" _level=3 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <h3 class="collapsible__heading kol-accordion__heading kol-headline kol-headline--h3 kol-headline--single">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _icons="kolicon-chevron-right" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </h3>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=false 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _icons="kolicon-chevron-right" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=true 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _disabled="" _icons="kolicon-chevron-right" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=false 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--open kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _ariaexpanded="" _icons="kolicon-chevron-down" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=true 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled collapsible--open kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _ariaexpanded="" _disabled="" _icons="kolicon-chevron-down" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <kol-button-wc _ariacontrols="accordion-control-nonce" _icons="kolicon-chevron-right" _label="Überschrift" class="collapsible__heading-button kol-accordion__heading-button" id="accordion-heading-nonce" slot="expert"></kol-button-wc>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;
